--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.5"
   }
