--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -1,4 +1,4 @@
-name: prettier
+name: Prettier
 
 on:
   pull_request:
@@ -13,9 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
       - name: Prettier Checker
-        uses: actionsx/prettier@v3
+        uses: creyD/prettier_action@v3.1
         with:
           args: --check --log-level=warn .
